# basic-h743ZI-config

./: Cargo.toml  grappa.tga  memory.x  openocd.cfg  openocd.gdb  steve.tga  test.tga  test_z_tecza.tga
.cargo/: config
dice-hub75/: Cargo.toml
dice-hub75/src/: lib.rs
src/: ded.rs  main.rs  new.rs
