[package]
name = "hello_there"
version = "0.1.0"
authors = ["PawelLawrynowicz <procyon97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "^0.7.2"
cortex-m-rt = "^0.6.0"
panic-halt = "0.2.0"
panic-itm = "0.4"
cortex-m-semihosting = "0.3.7"
panic-semihosting = "0.5.6"

stm32h7xx-hal = {version="0.9.0", features = ["stm32h743v","rt"]}

